--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:600" rel="stylesheet">
 		<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Niramit" rel="stylesheet">
-		<style type="text/css">
+		<style>
 			.sidebar li:nth-child(1){
 				background: #317A8E;
 			}
