--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 	<!DOCTYPE html>
-	<html>
+	<html lang="es">
 	<head>
 		<title>Ovi Alpaar - Introducción</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-with, initial-scale=1">
+		<meta name="author" content="Alejandro Palacios Arévalo">
+		<meta name="description" content="Tutorial Conexión PHP con Mysql">
+		<meta name="keyword" content="tutorial, html, php, formularios, css, educacion, instructivo, conexion">
 		<link rel="icon" type="img/png" href="images/idea2.png">
 		<link rel="stylesheet" type="text/css" href="css/index_style.css">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:600" rel="stylesheet">
@@ -17,7 +20,7 @@
 	</head>
 	<body>
 		<div class="sidebar">
-			<h2><a href="https://www.unad.edu.co/" target="blank"><img src="images/logo-unad.png"></a></h2>
+			<h2><a href="https://www.unad.edu.co/" target="blank"><img src="images/logo-unad.png" alt="logo-unad"></a></h2>
 			<ul>
 				<li><a class="boton-menu" id="menu1" href="index.html">Inicio</a></li>
 				<li><a class="boton-submenu" id="menu2" href="paso1.html">Lecturas</a>
@@ -27,20 +30,20 @@
 				<li><a class="boton-menu" id="menu5" href="autor.html">Autor</a></li>
 				<li> 
 					<a class="twitter-timeline contenido abrir" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw" width="225" height="225">Tweets by UniversidadUNAD</a> 
-					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
+					<script async src="https://platform.twitter.com/widgets.js">
 						
 					</script>
 	</li>
 	<li><div class="boton-menu" id="sfc6sc75f1mh6q2d81t1ue8se4cld4e6a4l"></div>
-<script type="text/javascript" src="https://counter5.wheredoyoucomefrom.ovh/private/counter.js?c=6sc75f1mh6q2d81t1ue8se4cld4e6a4l&down=async" async></script>
-<noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis"><img src="https://counter5.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=6sc75f1mh6q2d81t1ue8se4cld4e6a4l" border="0" title="contador de visitas gratis" height="" alt="contador de visitas gratis"></a></noscript>
+<script src="https://counter5.wheredoyoucomefrom.ovh/private/counter.js?c=6sc75f1mh6q2d81t1ue8se4cld4e6a4l&down=async" async></script>
+<noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis"><img src="https://counter5.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=6sc75f1mh6q2d81t1ue8se4cld4e6a4l" border="0" title="contador de visitas gratis" height="50px" alt="contador de visitas gratis"></a></noscript>
 </li>
 			</ul>
 		</div>
 		<div class="contenido abrir">
 			
 			<div class="cabecera">
-				<img src="images/restart.png" class="menu-bar"> <h3 class="texto-boton"><p id="inicio">Leer Completo / Abrir y Cerrar Menú</p></h3>
+				<img src="images/restart.png" class="menu-bar" alt="restablecer"> <h3 class="texto-boton" id="inicio">Leer Completo / Abrir y Cerrar Menú</h3>
 				<h2 class="titulo-header">Formulario HTML y CSS con Conexión a Base de Datos</h2>
 			</div>
 
@@ -86,7 +89,6 @@
 		<div id="sfc6sc75f1mh6q2d81t1ue8se4cld4e6a4l"></div>
 <script type="text/javascript" src="https://counter5.wheredoyoucomefrom.ovh/private/counter.js?c=6sc75f1mh6q2d81t1ue8se4cld4e6a4l&down=async" async></script>
 <noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis"><img src="https://counter5.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=6sc75f1mh6q2d81t1ue8se4cld4e6a4l" border="0" title="contador de visitas gratis" alt="contador de visitas gratis"></a></noscript>
-
-</body>
 </div>
+</body>
 	</html>
